--- a/style.css
+++ b/style.css
@@ -25,12 +25,13 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    max-width: 320px;
+    max-width: 330px;
     background-color: var(--card-background);
     padding: 1.5em;
     border-radius: 10px;
