--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 body {
     font-family: 'Outfit', sans-serif;
-    font-size: 18px;
+    font-size: 1.125rem;
     overflow-x: hidden; 
     background-color: var(--main-background);
     display: flex;
@@ -31,10 +31,15 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    max-width: 330px;
+    max-width: 18.3em;
     background-color: var(--card-background);
     padding: 1.5em;
-    border-radius: 10px;
+    border-radius: 0.5em;
+}
+
+button {
+    border: none;
+    border-radius: 0.6em;
 }
 
 .img-holder {
@@ -47,7 +52,7 @@ body {
 .img-holder::before, .img-holder::after {
     content: "";
     position: absolute;
-    border-radius: 10px;
+    border-radius: 0.5em;
 }
 
 .img-holder::before {
@@ -55,7 +60,7 @@ body {
     opacity: 0;
     background-color: var(--cyan);
     width: 100%;
-    height: 98%;
+    height: auto;
 }
 
 .img-holder::after {
@@ -80,9 +85,11 @@ body {
 }
 
 .img {
+    display: block;
     width: 100%;
+    height: auto;
     margin: auto;
-    border-radius: 10px;   
+    border-radius: 0.5em;   
 }
 
 .text-content {
@@ -91,7 +98,7 @@ body {
 
 .title {
     color: var(--white);
-    font-size: 22px;
+    font-size: 1.4rem;
     font-weight: 600;
 }
 
@@ -104,7 +111,7 @@ body {
     color: var(--soft-blue);
     font-weight: 300;
     margin-top: 0.8em;
-    font-size: 16px;
+    font-size: 1rem;
     margin-bottom: 1em;
 }
 
@@ -114,39 +121,48 @@ body {
 
 .same-line {
     margin-bottom: 1em;
+    width: 100%;
+    list-style: none;
+    justify-content: space-between;
+}
+
+img {
+    display: block;
 }
 
 .eth-icon {
-    width: 5%;
-    height: auto;
+    width: 10%;
+    height: 100%;
+}
+
+.ethereum, .time {
+    display: flex;
+    flex-grow: 1;
 }
 
 .eth-numbers {
     color: var(--cyan);
     font-weight: 400;
-    font-size: 15px;
+    font-size: 1rem;
     padding-left: 0.5em;
 }
 
 .time-icon {
     margin-left: auto;
-    width: 8%;
-    height: auto;
+    width: 15%;
+    height: 90%;
 }
 
 .days {
     color: var(--soft-blue);
     font-weight: 400;
-    font-size: 15px;
+    font-size: 1rem;
     padding-left: 0.5em;
 }
 
-.border-bottom {
-    border: 1px solid var(--border-line);
-}
-
 .jules {
-    margin-top: 1em;
+    padding-top: 1em;
+    border-top: 1px solid var(--border-line);
 }
 
 .avatar {
@@ -158,24 +174,19 @@ body {
 .jules-attribution {
     color: var(--soft-blue);
     font-weight: 300;
-    font-size: 15px;
+    font-size: 0.95rem;
     padding-left: 1em;
-    margin-top: 0.5em;
+    margin-top: 0.6em;
 }
 
-span {
+span a {
     color: var(--white);
-}
-
-span:hover {
-    color: var(--cyan);
-    cursor: pointer;
 }
 
 .attribution { 
     font-family: 'Outfit', sans-serif;
     color: var(--soft-blue);
-    font-size: 12px; 
+    font-size: 0.75rem; 
     text-align: center; 
     margin-top: 1em;
 }
@@ -184,6 +195,10 @@ span:hover {
     color: var(--white); 
 }
 
-.attribution a:hover {
+a {
+    text-decoration: none;
+}
+
+a:hover {
     color: var(--cyan);
 }
